unpackaged/main/default/objects/ETC_Limo_Refund_Settings__c/ETC_Limo_Refund_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>ETC Limo Refund Settings</label>
</CustomObject>