unpackaged/main/default/objects/ETC_Limo_Refund_Settings__c/fields/ETC_From__c.field-meta.xml
<CustomField>
    <fullName>ETC_From__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>