unpackaged/main/default/objects/ETC_Limo_Refund_Settings__c/fields/ETC_Percentage__c.field-meta.xml
<CustomField>
    <fullName>ETC_Percentage__c</fullName>
    <label>Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>