unpackaged/main/default/objects/ETC_Limo_Refund_Settings__c/fields/ETC_To__c.field-meta.xml
<CustomField>
    <fullName>ETC_To__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>